k8s/namespace-and-serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bidr
  labels:
    name: bidr
    environment: dev
