k8s/nginx-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-external
  namespace: default
  labels:
    app: nginx-proxy
    service: nginx-proxy-external
spec:
  type: LoadBalancer
  selector:
    app: nginx-proxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  loadBalancerSourceRanges:
    - 0.0.0.0/0
